tests/NormalTests/paczka1/small_fuzzy/80510983.err
Error in line 2: S114 S323 39,7
Error in line 5: gVlrQ S114 62,5
